WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75105
Typo in error message: Unexpected token 'defualt'
https://bugs.webkit.org/show_bug.cgi?id=75105
Summary
Typo in error message: Unexpected token 'defualt'
Brenton
Reported
2011-12-22 11:44:27 PST
Steps to reproduce: 1) Run narwhal with the JSC engine 2) console.log(default) Expected result: "SyntaxError: Unexpected token 'default'" Actual result: "SyntaxError: Unexpected token 'defualt'" I believe the constant is misdefined here:
https://github.com/WebKit/webkit/blob/e5423c7a54883012264311e5cc5446fd0de2765a/Source/JavaScriptCore/parser/JSParser.cpp#L180
Attachments
Patch
(4.43 KB, patch)
2012-01-11 14:13 PST
,
Eugene Girard
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eugene Girard
Comment 1
2012-01-11 14:13:48 PST
Created
attachment 122094
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-11 15:15:34 PST
Comment on
attachment 122094
[details]
Patch Clearing flags on attachment: 122094 Committed
r104750
: <
http://trac.webkit.org/changeset/104750
>
WebKit Review Bot
Comment 3
2012-01-11 15:15:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug