Typo in error message: Unexpected token 'defualt' https://bugs.webkit.org/show_bug.cgi?id=75105

Patch by Eugene Girard <girard@google.com> on 2012-01-11
Reviewed by Simon Fraser.

Source/JavaScriptCore:

* parser/Parser.h:
(JSC::Parser::getTokenName):

LayoutTests:

* fast/js/reserved-words-as-property-expected.txt:

Canonical link: https://commits.webkit.org/92920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104750 268f45cc-cd09-0410-ab3c-d52691b4dbfc